src/test/minic/error/enum_var_decl_wrong_type2.block
test {
    enum Color {RED, GREEN, BLUE} p = true;
}